Changes with Apache 1.3.20

  *) Fix a possible NULL pointer dereference in the detection of the
     default ServerName or IP string (introduced in 1.3.18).
     [Ignasi Roca, <Ignasi.Roca@fujitsu-siemens.com>]

  *) Make EBCDIC conversion fully configurable. Until now, apache relied
     on some (incomplete) heuristics, and would fail to correctly serve
     text files when they had a MIME type of application/anything, like
     application/x-javascript. The new conversion directives allow
     defining the conversion based on MIME type or file suffix.
     [Martin Kraemer]

  *) Add a -V flag to suexec, which causes it to display the
     compile-time settings with which it was built.  (Only
     usable by root or the HTTPD_USER username.)  [Ken Coar]

  *) Set the Win32 service description in the Services control panel to 
     the server_version string from Apache and the loaded modules.
     [William Rowe]

  *) Added a new API for NetWare, ap_os_dso_unsym(), to allow Apache the 
     chance to unimport module symbols before it shuts down.  This is 
     necessary so that Apache on NetWare can shutdown cleanly in an error
     condition such as a failure while reading the httpd.conf file.
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Introduce NUL device pipes for stdin and stdout for the parent Win32
     service process.  This solves bugs such as PR7198 that report 
     "dup2(stdin) failed" when trying to use piped logs.  [William Rowe]

Changes with Apache 1.3.19

  *) Rewrite ap_unparse_uri_components() to make it safer and more readable
     ["Jeffrey W. Baker" <jwbaker@acm.org>]

  *) Under certain circumstances, Apache did not supply the
     right response headers when requiring authentication.
     [Gertjan van Wingerde <Gertjan.van.Wingerde@cmg.nl>] PR#7114

  *) Clean up some end-of-loop not reached warnings [Jim Jagielski,
     Aris Stathakis <aris@sco.COM>]

  *) Add the correct language tag for interoperation with the Taiwanese