@@ -23,11 +23,15 @@ int main (int argc, char **argv)
     char buf[BUFSIZE], buf2[MAX_PATH], errbuf[ERRMSGSZ];
     time_t tLogEnd = 0, tRotation;
     int nLogFD = -1, nLogFDprev = -1, nMessCount = 0, nRead, nWrite;
+    int utc_offset = 0;
+    int use_strftime = 0;
+    time_t now;
     char *szLogRoot;
 
-    if (argc != 3) {
+    if (argc < 3) {
         fprintf(stderr,
-                "%s <logfile> <rotation time in seconds>\n\n",
+                "Usage: %s <logfile> <rotation time in seconds> "
+                "[offset minutes from UTC]\n\n",
                 argv[0]);
 #ifdef OS2
         fprintf(stderr,
@@ -48,26 +52,38 @@ int main (int argc, char **argv)
     }
 
     szLogRoot = argv[1];
+    if (argc >= 4) {
+        utc_offset = atoi(argv[3]) * 60;
+    }
     tRotation = atoi(argv[2]);
     if (tRotation <= 0) {
         fprintf(stderr, "Rotation time must be > 0\n");
         exit(6);
     }
 
+    use_strftime = (strstr(szLogRoot, "%") != NULL);
     for (;;) {
         nRead = read(0, buf, sizeof buf);
+        now = time(NULL) + utc_offset;
         if (nRead == 0)
             exit(3);
         if (nRead < 0)
             if (errno != EINTR)
                 exit(4);
-        if (nLogFD >= 0 && (time(NULL) >= tLogEnd || nRead < 0)) {
+        if (nLogFD >= 0 && (now >= tLogEnd || nRead < 0)) {
             nLogFDprev = nLogFD;
             nLogFD = -1;
         }
         if (nLogFD < 0) {
-            time_t tLogStart = (time(NULL) / tRotation) * tRotation;
-            sprintf(buf2, "%s.%010d", szLogRoot, (int) tLogStart);
+            time_t tLogStart = (now / tRotation) * tRotation;
+            if (use_strftime) {
+                struct tm *tm_now;
+                tm_now = gmtime(&tLogStart);
+                strftime(buf2, sizeof(buf2), szLogRoot, tm_now);
+            }
+            else {
+                sprintf(buf2, "%s.%010d", szLogRoot, (int) tLogStart);
+            }
             tLogEnd = tLogStart + tRotation;
             nLogFD = open(buf2, O_WRONLY | O_CREAT | O_APPEND, 0666);
             if (nLogFD < 0) {
